<resources>
    <string name="app_name">Your Guide</string>
    <string name="app_heading">Discover The Province</string>
    <string name="app_sub_heading">Visit the unseen beauty of Pakistan</string>
    <string name="google_maps_api_key">AIzaSyCdEfjbdKVe53DbmCoS3f-wFN6JzxHlhBo</string>
    <string name="todo">todo</string>
    <string name="province_name">Punjab</string>
    <string name="province_details">Punjab is one of the largest provinces in Pakistan. It is more populated than all the other ones. This is one of the main provinces of Pakistan where people </string>
    <string name="punjab_province_description">Punjab, Pakistan: Rich in culture and history, this populous province features fertile plains and plays a crucial role in agriculture and industry.</string>
    <string name="sindh_province_description">Sindh, Pakistan: A province steeped in history and diverse culture. Home to the bustling city of Karachi, with an economy driven by trade and industry.</string>
    <string name="balochistan_province_description">Balochistan, Pakistan: Vast and rugged, this province boasts breathtaking landscapes and a distinct Balochi culture. Abundant in natural resources like gas and minerals.</string>
    <string name="kpk_province_description">KPK, Pakistan: Nestled in the northwestern region, Khyber Pakhtunkhwa is known for its stunning mountainous terrain, rich Pashtun heritage, and historical significance.</string>
    <string name="province_number_of_historical_sights">5</string>
    <string name="province_number_of_cities">5</string>
    <string name="province_number_of_restaurants">5</string>
    <string name="number_of_cities">0</string>
    <string name="cities">Cities</string>
    <string name="number_of_popular_sights">0</string>
    <string name="restaurants">Restaurants</string>
    <string name="number_of_historical_sights">0</string>
    <string name="historical_sights">Historical Sights</string>
    <string name="province_list_item_title">Title</string>
    <string name="province_list_item_description">This is the description of the province list item and we are including the 3 lines with ellipsis at the very end of the description</string>
    <string name="rating">4.2</string>
    <string name="review">(56)</string>
    <string name="activity_title">Lorem</string>
    <string name="activity_advertising_phrases">Lorem ipsum dolor</string>
    <string name="activity_address">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus odio</string>
    <string name="activity_question">What would you like to do?</string>
    <string name="activity_rating">0.0</string>
    <string name="activity_review">(0)</string>
    <string name="activity_default_value">0</string>
    <string name="activity_icon_text">Lorem</string>
    <string name="activity_description_heading">Description</string>
    <string name="activity_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla condimentum, eros nec facilisis suscipit, justo urna iaculis nunc, nec varius justo risus quis felis. Vivamus euismod bibendum nulla, eu bibendum odio tempor a. Integer auctor quam id eros placerat, eu fringilla neque dictum.</string>
    <string name="activity_see_the_location_button_text">See the Location</string>
    <string name="activity_book_a_table_button_text">Book a Table</string>
    <string name="activity_open_in_heading">Open In</string>
    <string name="activity_restaurant_timings_text">06:00 – 23:00</string>
    <string name="province_popular_city">Popular City</string>
    <string name="province_see_all">See All</string>
    <string name="province_top_restaurant">Top Restaurant</string>
    <string name="province_historical_place">Historical Place</string>
    <string name="punjab_city_one_title">Lahore</string>
    <string name="punjab_city_one_address">Lahore, Punjab, Pakistan located (31.5497° N latitude and 74.3436° E longitude)</string>
    <string name="punjab_city_one_latitude">31.542835442025968</string>
    <string name="punjab_city_one_longitude">74.33788495008227</string>
    <string name="punjab_city_one_description">Lahore, Pakistan, a vibrant city, is a tapestry of culture, culinary delights, and captivating beauty. Ancient forts and mosques narrate history, while bustling streets serve flavorful kebabs and stews. Tranquil Shalimar Gardens exemplify exquisite art. Lahore harmonizes tradition, delectable cuisine, and timeless charm, creating an immersive blend of history, flavors, and artistry.</string>
    <string name="punjab_city_one_rating">4.8</string>
    <string name="punjab_city_one_review">92</string>
    <string name="punjab_city_two_title">Faisalabad</string>
    <string name="punjab_city_two_address">Faisalabad, Punjab, Pakistan located (31.4504° N latitude and 73.1350° E longitude)</string>
    <string name="punjab_city_two_latitude">31.459787327305563</string>
    <string name="punjab_city_two_longitude">73.12224369732402</string>
    <string name="punjab_city_two_description">Faisalabad, Pakistan, a harmonious blend of vibrant sights, culture, and flavors, welcomes you with lively streets and warm-hearted locals. The "Rangila Faisalabad" festival and intricate crafts celebrate its rich heritage, while sizzling tikkas and the tranquility of Jinnah Garden tantalize the senses. Amidst the bustling markets, the iconic Clock Tower stands as a testament to its history, making Faisalabad a captivating tapestry of experiences.</string>
    <string name="punjab_city_two_rating">4.2</string>
    <string name="punjab_city_two_review">62</string>
    <string name="punjab_city_three_title">Rawalpindi</string>
    <string name="punjab_city_three_address">Rawalpindi, Punjab, Pakistan located (33.6844° N latitude and 73.0479° E longitude)</string>
    <string name="punjab_city_three_latitude">33.573420320743914</string>
    <string name="punjab_city_three_longitude">73.02156520093435</string>
    <string name="punjab_city_three_description">Rawalpindi, Pakistan, harmoniously blends culture, scenic beauty, and delectable cuisine. Festivals and parks foster communal joy. Mouthwatering biryanis and kebabs tantalize taste buds. Friendly locals showcase their artistic talents while bustling Raja Bazaar and serene Ayub National Park offer diverse experiences. Rawalpindi is a delightful destination to immerse in culture, savor cuisine, and enjoy exploration.</string>
    <string name="punjab_city_three_rating">4.5</string>
    <string name="punjab_city_three_review">99</string>
    <string name="punjab_city_four_title">Multan</string>
    <string name="punjab_city_four_address">Multan, Punjab, Pakistan located (30.1575° N latitude and 71.5249° E longitude)</string>
    <string name="punjab_city_four_latitude">30.16631299784593</string>
    <string name="punjab_city_four_longitude">71.5240803407844</string>
    <string name="punjab_city_four_description">Multan, Pakistan, blends culture, natural beauty, and delicious cuisine. Festivals and local crafts showcase traditions. Tasty biryanis and kebabs delight taste buds. Friendly locals share skills at art venues. Vibrant markets like Hussain Agahi Bazaar and serene parks add charm. Experience culture, relish food, and explore in Multan.</string>
    <string name="punjab_city_four_rating">3.9</string>
    <string name="punjab_city_four_review">59</string>
    <string name="punjab_city_five_title">Gujranwala</string>
    <string name="punjab_city_five_address">Gujranwala, Punjab, Pakistan located (32.1617° N latitude and 74.1883° E longitude)</string>
    <string name="punjab_city_five_latitude">32.15967601116904</string>
    <string name="punjab_city_five_longitude">74.1865692904194</string>
    <string name="punjab_city_five_description">Gujranwala, Pakistan, combines culture, scenic beauty, and flavorful cuisine. Festivals and local crafts embody tradition. Delight in kebabs and biryanis that tantalize. Friendly locals showcase artistic talents. Bustling markets and Jinnah Park enhance appeal. Explore culture, savor flavors, and embrace Gujranwala\'s vibrant charm.</string>
    <string name="punjab_city_five_rating">3.9</string>
    <string name="punjab_city_five_review">42</string>
    <string name="popular_city_icon_text_one">Car</string>
    <string name="popular_city_icon_text_two">Travel</string>
    <string name="popular_city_icon_text_three">Food</string>
    <string name="popular_city_icon_text_four">Hotel</string>
    <string name="punjab_restaurant_one_title">Monal</string>
    <string name="punjab_restaurant_one_address">Plaza Liberty Park and Ride Plaza, Liberty Chowk, Round About, Gulberg III, Lahore</string>
    <string name="punjab_restaurant_one_latitude">31.50983091406581</string>
    <string name="punjab_restaurant_one_longitude">74.34114487612106</string>
    <string name="punjab_restaurant_one_description">Monal Lahore stands tall on Park and Ride Plaza Liberty, featuring indoor and outdoor dining spaces along with a kid\'s play area. The fusion of rustic charm and modern design is showcased through its live kitchen. Daily live music enhances the enchanting experience at Monal Lahore.</string>
    <string name="punjab_restaurant_one_rating">4.5</string>
    <string name="punjab_restaurant_one_review">588</string>
    <string name="punjab_restaurant_two_title">Haveli</string>
    <string name="punjab_restaurant_two_address">2170-A Food St Fort Rd, opposite Badshahi Mosque, Shahi Mohallah Walled City, Lahore</string>
    <string name="punjab_restaurant_two_latitude">31.58684033599399</string>
    <string name="punjab_restaurant_two_longitude">74.3112920822087</string>
    <string name="punjab_restaurant_two_description">Experience BBQ-Pakistani fusion at its finest. Indulge in smoky barbecue delights and savor authentic flavors that blend tradition with innovation. From succulent kebabs to aromatic biryanis, our restaurant offers a tantalizing journey where every bite tells a delicious tale.</string>
    <string name="punjab_restaurant_two_rating">4.0</string>
    <string name="punjab_restaurant_two_review">223</string>
    <string name="punjab_restaurant_three_title">Andaaz</string>
    <string name="punjab_restaurant_three_address">2189 A Fort Rd, Shahi Mohallah Walled City of Lahore, Lahore, Punjab</string>
    <string name="punjab_restaurant_three_latitude">31.58680178151085</string>
    <string name="punjab_restaurant_three_longitude">74.30968738220895</string>
    <string name="punjab_restaurant_three_description">Embark on a journey from dinner to late-night revelry at our chic venue. Savor exquisite dinner choices and expertly mixed drinks, weaving a delightful tapestry of taste and atmosphere that endures into the night. Join us for an unforgettable dusk-to-late hours experience of flavor and delight.</string>
    <string name="punjab_restaurant_three_rating">4.5</string>
    <string name="punjab_restaurant_three_review">393</string>
    <string name="punjab_restaurant_four_title">Spice Bazar</string>
    <string name="punjab_restaurant_four_address">T-01, Tipu Rd, off MM Alam Road, Lahore, 54660</string>
    <string name="punjab_restaurant_four_latitude">31.518762065003532</string>
    <string name="punjab_restaurant_four_longitude">74.35506421779098</string>
    <string name="punjab_restaurant_four_description">Experience a gastronomic odyssey from sunrise to sunset in our exceptional eatery. Explore a spectrum of flavors, from inviting brunches to hearty lunches and refined dinners, each a delightful chapter in shared culinary joy. Join us to relish the artistry of taste, one meal at a time.</string>
    <string name="punjab_restaurant_four_rating">4.0</string>
    <string name="punjab_restaurant_four_review">189</string>
    <string name="punjab_restaurant_five_title">Dera</string>
    <string name="punjab_restaurant_five_address">Hafeez Kardar Rd، near Gaddafi Stadium, Block E 2 Gulberg III, Lahore</string>
</resources>