<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/province_list_height">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        style="@style/ProvinceCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <!-- Province thumbnail image. -->
            <ImageView
                android:id="@+id/province_category_thumbnail"
                style="@style/ProvinceCardThumbnailImage"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_launcher_background" />

            <!-- Card details container. -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="35"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <!-- Province name/title. -->
                <TextView
                    android:id="@+id/province_name"
                    style="@style/ProvinceCardTitle"
                    android:text="@string/activity_title"/>

                <!-- Province description. -->
                <TextView
                    android:id="@+id/province_description"
                    style="@style/ProvinceCardDescription"
                    android:text="@string/activity_description"/>
            </LinearLayout>

            <!-- Card bottom data container. -->
            <LinearLayout
                style="@style/ProvinceBottomDataContainer"
                android:baselineAligned="false">

                <!-- Historical Sights LinearLinear. -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="bottom"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    tools:ignore="NestedWeights">

                    <!-- TextView to hold the data of number of historical places in the province. -->
                    <TextView
                        android:id="@+id/province_historical_sights_number"
                        style="@style/NumberOfPlaces"
                        android:text="@string/activity_default_value" />

                    <!-- Title of Historical Sights in province. -->
                    <TextView
                        style="@style/PlacesTextStyle"
                        android:text="@string/historical_sights" />
                </LinearLayout>

                <!-- Cities LinearLayout. -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    android:gravity="bottom|center"
                    android:orientation="horizontal"
                    tools:ignore="RtlSymmetry">

                    <!-- TextView to hold the data of number of cities in the province. -->
                    <TextView
                        android:id="@+id/province_cities_number"
                        style="@style/NumberOfPlaces"
                        android:text="@string/activity_default_value" />

                    <!-- Title of Cities in province. -->
                    <TextView
                        style="@style/PlacesTextStyle"
                        android:text="@string/cities" />
                </LinearLayout>


                <!-- Restaurants LinearLayout. -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="bottom|end"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">

                    <!-- TextView to hold the data of popular sights in the province. -->
                    <TextView
                        android:id="@+id/province_restaurants_number"
                        style="@style/NumberOfPlaces"
                        android:text="@string/activity_default_value" />

                    <!-- Title of Restaurants in the province. -->
                    <TextView
                        style="@style/PlacesTextStyle"
                        android:text="@string/restaurants" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>