<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".kpk_province.KPKActivity">

    <!-- LinearLayout to hold all the children views. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Activity header image for province at the top. -->
        <ImageView
            style="@style/ProvinceHeaderImage"
            android:contentDescription="@string/todo"
            android:src="@drawable/kpk_province_header" />

        <!-- Horizontal LinearLayout for "Popular City" and "See All" headings. -->
        <LinearLayout style="@style/ListCategoryHeaderRootView">

            <!-- Heading for popular city cards. -->
            <TextView
                style="@style/ProvinceListCategoryHeading"
                android:text="@string/province_popular_city" />
            <!-- See all button to see all the cards separately in other activity. -->
            <TextView
                style="@style/ProvinceListSeeAllHeading"
                android:text="@string/province_see_all" />
        </LinearLayout>

        <!-- KPK province cities RecyclerView. -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/kpk_province_popular_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Horizontal LinearLayout for "Top Restaurant" and "See All" heading. -->
        <LinearLayout style="@style/ListCategoryHeaderRootView">

            <!-- Heading for top restaurant cards. -->
            <TextView
                style="@style/ProvinceListCategoryHeading"
                android:text="@string/province_top_restaurant" />
            <!-- See All button to see all the cards separately in other activity. -->
            <TextView
                style="@style/ProvinceListSeeAllHeading"
                android:text="@string/province_see_all" />
        </LinearLayout>

        <!-- KPK province top restaurant RecyclerView. -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/kpk_province_top_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Horizontal LinearLayout for "Historical Place" and "See All" heading. -->
        <LinearLayout style="@style/ListCategoryHeaderRootView">

            <!-- Heading for historical place cards. -->
            <TextView
                style="@style/ProvinceListCategoryHeading"
                android:text="@string/province_historical_place" />
            <!-- See all button to see all the cards separately in other activity. -->
            <TextView
                style="@style/ProvinceListSeeAllHeading"
                android:text="@string/province_see_all" />
        </LinearLayout>

        <!-- KPK province historical place RecyclerView. -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/kpk_province_historical_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>