<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- card for the list items in the layout file. -->
    <androidx.cardview.widget.CardView
        android:layout_width="168dp"
        android:layout_height="224dp"
        android:layout_margin="8dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp">

        <!-- RelativeLayout to align child views relative to their parents. -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Preview image for place display in the province list items. -->
            <ImageView
                android:id="@+id/province_list_preview_image"
                style="@style/ProvinceCategoryListItemImage"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_launcher_background" />

            <!-- Title for any place, or restaurant etc in the province list item. -->
            <TextView
                android:id="@+id/province_list_item_title"
                style="@style/ProvinceCategoryListItemTitle"
                android:layout_below="@id/province_list_preview_image"
                android:text="@string/activity_title"/>

            <!-- Description for any place, or restaurant etc in the province list item. -->
            <TextView
                android:id="@+id/province_list_item_description"
                style="@style/ProvinceCategoryListItemDescription"
                android:layout_below="@id/province_list_item_title"
                android:text="@string/activity_description"/>

            <!-- Bottom container where rating and favourite heart is placed. -->
            <RelativeLayout
                style="@style/ProvinceCategoryListItemBottomDataContainer">

                <!-- Star-rating image for better layout looks. -->
                <ImageView
                    android:id="@+id/star_rating_image"
                    style="@style/ProvinceCategoryListItemRatingStarImage"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/baseline_star_24" />

                <!-- Star-rating numbers. -->
                <TextView
                    android:id="@+id/rating"
                    style="@style/ProvinceCategoryListItemRating"
                    android:layout_toEndOf="@id/star_rating_image"
                    android:text="@string/activity_rating"
                    tools:ignore="RelativeOverlap" />

                <!-- Review numbers. -->
                <TextView
                    android:id="@+id/review"
                    style="@style/ProvinceCategoryListItemReview"
                    android:layout_toEndOf="@id/rating"
                    android:text="@string/activity_review"
                    tools:ignore="RelativeOverlap" />

                <!-- Heart (favorite) image for better layout looks. -->
                <ImageView
                    style="@style/ProvinceCategoryListItemHeartImage"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/baseline_fav_icon" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>