<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".kpk_province.KPKActivity">

    <!-- RelativeLayout to hold all the children views. -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Image to display at the top of the kpk activity. -->
        <ImageView
            android:id="@+id/kpk_province_preview_image"
            style="@style/ProvinceHeaderImage"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher_background" />

        <!-- Horizontal LinearLayout for "Popular City" and "See All" headings. -->
        <LinearLayout
            android:id="@+id/kpk_province_city_heading"
            style="@style/ListCategoryHeaderRootView"
            android:layout_below="@id/kpk_province_preview_image">

            <!-- Heading for popular city cards. -->
            <TextView
                style="@style/ProvinceListCategoryHeading"
                android:text="@string/province_popular_city" />
            <!-- See all button to see all the cards separately in other activity. -->
            <TextView
                style="@style/ProvinceListSeeAllHeading"
                android:text="@string/province_see_all" />
        </LinearLayout>

        <!-- KPK province cities RecyclerView. -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/kpk_province_popular_city"
            style="@style/ProvinceCategoryRecyclerView"
            android:layout_below="@id/kpk_province_city_heading"/>

        <!-- Horizontal LinearLayout for "Top Restaurant" and "See All" heading. -->
        <LinearLayout
            android:id="@+id/kpk_province_restaurant_heading"
            style="@style/ListCategoryHeaderRootView"
            android:layout_below="@id/kpk_province_popular_city">

            <!-- Heading for top restaurant cards. -->
            <TextView
                style="@style/ProvinceListCategoryHeading"
                android:text="@string/province_top_restaurant" />
            <!-- See All button to see all the cards separately in other activity. -->
            <TextView
                style="@style/ProvinceListSeeAllHeading"
                android:text="@string/province_see_all" />
        </LinearLayout>

        <!-- KPK province top restaurant RecyclerView. -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/kpk_province_top_restaurant"
            style="@style/ProvinceCategoryRecyclerView"
            android:layout_below="@id/kpk_province_restaurant_heading"/>

        <!-- Horizontal LinearLayout for "Historical Place" and "See All" heading. -->
        <LinearLayout
            android:id="@+id/kpk_province_historical_place_heading"
            style="@style/ListCategoryHeaderRootView"
            android:layout_below="@id/kpk_province_top_restaurant">

            <!-- Heading for historical place cards. -->
            <TextView
                style="@style/ProvinceListCategoryHeading"
                android:text="@string/province_historical_place" />
            <!-- See all button to see all the cards separately in other activity. -->
            <TextView
                style="@style/ProvinceListSeeAllHeading"
                android:text="@string/province_see_all" />
        </LinearLayout>

        <!-- KPK province historical place RecyclerView. -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/kpk_province_historical_place"
            style="@style/ProvinceCategoryRecyclerView"
            android:layout_below="@id/kpk_province_historical_place_heading"/>

        <!-- Include the custom toolbar -->
        <include layout="@layout/custom_toolbar" />
    </RelativeLayout>
</ScrollView>