<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".sindh_province.SindhActivity">

    <!-- RelativeLayout to hold all the children views. -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Image to display at the top of the sindh activity. -->
        <ImageView
            android:id="@+id/sindh_province_preview_image"
            style="@style/ProvinceHeaderImage"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher_background" />

        <!-- Horizontal LinearLayout for "Popular City" and "See All" heading. -->
        <LinearLayout
            android:id="@+id/sindh_province_city_heading"
            style="@style/ProvinceListCategoryHeadingsRootView"
            android:layout_below="@id/sindh_province_preview_image">

            <!-- Heading for popular city cards. -->
            <TextView
                style="@style/ProvinceListCategoryHeading"
                android:text="@string/province_popular_city" />
            <!-- See All button to see all the cards separately in other activity. -->
            <TextView
                style="@style/ProvinceListCategorySeeAllHeading"
                android:text="@string/province_see_all" />

        </LinearLayout>

        <!-- Sindh province cities RecyclerView. -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sindh_province_popular_city"
            style="@style/ProvinceListCategoryRecyclerView"
            android:layout_below="@id/sindh_province_city_heading" />

        <!-- Horizontal LinearLayout for "Top Restaurant" and "See All" headings. -->
        <LinearLayout
            android:id="@+id/sindh_province_restaurant_heading"
            style="@style/ProvinceListCategoryHeadingsRootView"
            android:layout_below="@id/sindh_province_popular_city">

            <!-- Heading for top restaurant cards. -->
            <TextView
                style="@style/ProvinceListCategoryHeading"
                android:text="@string/province_top_restaurant" />
            <!-- See All button to see all the cards separately in other activity. -->
            <TextView
                style="@style/ProvinceListCategorySeeAllHeading"
                android:text="@string/province_see_all" />
        </LinearLayout>

        <!-- Sindh province top restaurants RecyclerView. -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sindh_province_top_restaurant"
            style="@style/ProvinceListCategoryRecyclerView"
            android:layout_below="@id/sindh_province_restaurant_heading" />

        <!-- Horizontal LinearLayout for "Historical Place" and "See All" headings. -->
        <LinearLayout
            android:id="@+id/sindh_province_historical_place_heading"
            style="@style/ProvinceListCategoryHeadingsRootView"
            android:layout_below="@id/sindh_province_top_restaurant">

            <!-- Heading for historical place cards. -->
            <TextView
                style="@style/ProvinceListCategoryHeading"
                android:text="@string/province_historical_place" />
            <!-- See All button to see all the cards separately in other activity. -->
            <TextView
                style="@style/ProvinceListCategorySeeAllHeading"
                android:text="@string/province_see_all" />
        </LinearLayout>

        <!-- Sindh province historical place RecyclerView. -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sindh_province_historical_place"
            style="@style/ProvinceListCategoryRecyclerView"
            android:layout_below="@id/sindh_province_historical_place_heading" />

        <!-- Include the custom toolbar -->
        <include layout="@layout/custom_toolbar" />
    </RelativeLayout>
</ScrollView>